@@ -83,8 +83,6 @@ _IGNORED_PARAMETERS: Final[tuple[str, ...]] = (
     "AES_KEY",
     "BOOST_TIME",
     "BOOT",
-    "CLEAR_WINDOW_OPEN_SYMBOL",
-    "COMBINED_PARAMETER",
     "DATE_TIME_UNKNOWN",
     "DECISION_VALUE",
     "DEVICE_IN_BOOTLOADER",
@@ -95,9 +93,7 @@ _IGNORED_PARAMETERS: Final[tuple[str, ...]] = (
     "INCLUSION_UNSUPPORTED_DEVICE",
     "INHIBIT",
     "INSTALL_MODE",
-    "LEVEL_COMBINED",
     "LEVEL_REAL",
-    "OLD_LEVEL",
     "PARTY_SET_POINT_TEMPERATURE",
     "PARTY_TIME_END",
     "PARTY_TIME_START",
@@ -108,13 +104,11 @@ _IGNORED_PARAMETERS: Final[tuple[str, ...]] = (
     "SECTION",
     "SELF_CALIBRATION",
     "SET_SYMBOL_FOR_HEATING_PHASE",
-    "SMOKE_DETECTOR_COMMAND",
     "STATE_UNCERTAIN",
     "SWITCH_POINT_OCCURED",
     "TEMPERATURE_LIMITER",
     "TEMPERATURE_OUT_OF_RANGE",
     "TIME_OF_OPERATION",
-    "WOCHENPROGRAMM",
 )
 
 # Ignore Parameter that end with
