@@ -10,6 +10,7 @@ isort==5.10.1
 mypy==0.991
 pytest>=7.2.0
 pytest-timeout==2.1.0
+pytest-socket>=0.5.1
 pytest-cov==3.0.0
 pytest-asyncio==0.20.2
 pytest-aiohttp==1.0.4
