@@ -11,7 +11,7 @@ import pytest
 from hahomematic.const import HmEntityUsage
 from hahomematic.generic_platforms.action import HmAction
 
-TEST_DEVICES = {
+TEST_DEVICES: dict[str, str] = {
     "VCU9724704": "HmIP-DLD.json",
 }
 
