@@ -11,7 +11,7 @@ import pytest
 from hahomematic.const import HmEntityUsage
 from hahomematic.generic_platforms.button import HmButton
 
-TEST_DEVICES = {
+TEST_DEVICES: dict[str, str] = {
     "VCU1437294": "HmIP-SMI.json",
 }
 
@@ -31,5 +31,5 @@ async def test_hmbutton(
     assert button.value is None
     assert button.value_list is None
     assert button.hmtype == "ACTION"
-    assert button.send_value(1)
+    assert button.press()
     assert button.value is None
