@@ -11,7 +11,7 @@ import pytest
 from hahomematic.const import HmEntityUsage
 from hahomematic.generic_platforms.number import HmFloat, HmInteger
 
-TEST_DEVICES = {
+TEST_DEVICES: dict[str, str] = {
     "VCU4984404": "HmIPW-STHD.json",
 }
 
