@@ -12,7 +12,7 @@ from hahomematic.const import HmEntityUsage
 from hahomematic.custom_platforms.switch import CeSwitch
 from hahomematic.generic_platforms.switch import HmSwitch
 
-TEST_DEVICES = {
+TEST_DEVICES: dict[str, str] = {
     "VCU2128127": "HmIP-BSM.json",
 }
 
