@@ -11,7 +11,7 @@ import pytest
 from hahomematic.const import HmEntityUsage
 from hahomematic.generic_platforms.text import HmText
 
-TEST_DEVICES = {}
+TEST_DEVICES: dict[str, str] = {}
 
 
 @pytest.mark.asyncio
@@ -25,15 +25,6 @@ async def no_test_hmtext(
         HmText, await get_hm_generic_entity(central, "VCU7981740:1", "STATE")
     )
     assert text.usage == HmEntityUsage.ENTITY
-
-
-@pytest.mark.asyncio
-async def test_empty(
-    central_local_factory: helper.CentralUnitLocalFactory,
-) -> None:
-    """Test HmText. There are currently no text entities"""
-    central = await central_local_factory.get_central(TEST_DEVICES)
-    assert central
 
 
 # TODO: Add test for sysvar
